--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "thequizapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://armoni81.github.io/The-Ultimate-Quiz-App/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
