--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "react-dom": "^17.0.2",
     "react-hook-use-state": "^1.1.0",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "underscore": "^1.13.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "NODE_OPTIONS=--openssl-legacy-provider npm run build",
+    "deploy": "NODE_OPTIONS=--openssl-legacy-provider gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "gh-pages": "^3.2.3"
   }
 }
